tests/error/linear_errors/test_temp.err
Error: Drop violation (at $FILE:7:4)
  | 
5 | @compile_guppy
6 | def foo(b: bool) -> None:
7 |     t = (qubit(), qubit(), 0)
  |     ^ Tuple index `t[1]` with non-droppable type `qubit` is leaked

Help: Make sure that `t[1]` is consumed or returned to avoid the leak

Guppy compilation failed due to 1 previous error
